# AC4DC

./: .Makefile_template  .err  .gitattributes  .gitignore  .tags  Details.md  Makefile  Notes.md  Output_Details.md  README.md  README_old.md  batch_generation.sh  benchmark_test.sh  compile.sh  compile_commands.json  configure.ac  configure.sh  generate_batch.py  ion_comparison.sh  load_all_modules.sh  load_modules.sh  log.txt  make_plots.sh  meson.build  old_makefile  rename_folders.bash  run_sims.sh  sim_batch_med.slurm  sulfur_test.sh  tt.txt
Z-InteractiveExamples/: Note.txt
config/: banner.txt  version.txt
doxygen/: Doxyfile
include/: AdamsIntegrator.hpp  Adams_arrays.h  BSpline.h  BoundTransport.h  ComputeRateParam.h  Constant.h  DecayRates.h  Dipole.h  Display.h  DynamicRegions.h  EigenSolver.h  ElectronRateSolver.h  ElectronSolver.h  FreeDistribution.h  Grid.h  GridRegions.h  GridSpacing.hpp  HartreeFock.h  HybridIntegrator.hpp  Input.h  LossGeometry.hpp  MolInp.h  Numerics.h  PairFunction.h  Plotting.h  Potential.h  Pulse.h  RadialWF.h  RateSystem.h  SplineBasis.h  SplineIntegral.h  config.h  cxxopts.hpp  loadingwidget.hpp  meson.build  ncursesElectronRateSolver.h  stdafx.h
include/Wigner/: meson.build
input/: Be.inp  Beryllium.mol  C.inp  COV_Protease.mol  Carbon.mol  Carbon_1um.mol  Carbon_Full.mol  Carbon_Full_FineStep.mol  Carbon_HR1.mol  Carbon_HR1_hyb.mol  Carbon_HR2.mol  Carbon_HR2keV.mol  Carbon_HR3.mol  Carbon_L.mol  Carbon_Load_Test.mol  Carbon_S.mol  Carbon_and_Hydrogen.mol  Carbon_custom_grid.mol  Carbon_debug.mol  Carbon_huge.mol  Carbon_large.mol  Carbon_lifted_min.mol  Carbon_next.mol  Carbon_next_custom_grid.mol  Carbon_next_pt2.mol  Carbon_original_speed_test.mol  Carbon_square.mol  Carbon_square_no_ee.mol  Ethanol.mol  Fast.mol  Grid_Speed_Test.mol  H.inp  He.inp  Helium.mol  Hydrogen.mol  Lysozyme.mol  Lysozyme.txt  Lysozyme_V3.mol  N.inp  Na.inp  (+28 more)
old__src/: IntegrateRateEquation.cpp  Plasma.h  (+2 more)
src/: .UnusedMethods.cpp  AdamsIntegrator.hpp  Adams_arrays.h  BSpline.h  BoundTransport.cpp  ComputeRateParam.cpp  ComputeRateParam.h  Constant.cpp  Constant.h  DecayRates.cpp  DecayRates.h  Dipole.cpp  Dipole.h  Display.cpp  DynamicRegions.cpp  EigenSolver.cpp  ElectronRateSolver.cpp  ElectronSolver.cpp  ElectronSolver.h  ElectronSolverGridDynamics.cpp  ElectronSolverIO.cpp  ElectronSolverLoading.cpp  ElectronSolverOutput.cpp  FreeDistribution.cpp  FreeDistribution.h  Grid.cpp  Grid.h  GridRegions.cpp  GridSpacing.hpp  HartreeFock.cpp  HartreeFock.h  HybridIntegrator.hpp  Input.cpp  Input.h  IntegrateRateEquation.cpp  IntegrateRateEquation.h  LossGeometry.hpp  MolInp.cpp  MolInp.h  NTPlasma.cpp  (+31 more)
src/Wigner/: meson.build  wignerSymbols.cpp
(+1405 files in other folders)
