#config = configuration_data()
#config.set
project_header_files += files(
'Adams_arrays.h',
'BSpline.h',
'BoundTransport.h',
'ComputeRateParam.h',
'Constant.h',
'DecayRates.h',
'Dipole.h',
'Display.h',
'DynamicRegions.h',
'EigenSolver.h',
'ElectronRateSolver.h',
'FreeDistribution.h',
'Grid.h',
'HartreeFock.h',
'Input.h',
'MolInp.h',
'Numerics.h',
'PairFunction.h',
'Plotting.h',
'Potential.h',
'Pulse.h',
'RadialWF.h',
'RateSystem.h',
'SplineBasis.h',
'SplineIntegral.h',
'config.h',
'stdafx.h')

subdir('Wigner')
