
main_sources = files(
'BoundTransport.cpp',
'ComputeRateParam.cpp',
'Constant.cpp',
'DecayRates.cpp',
'Dipole.cpp',
#'Display.cpp',
'DynamicRegions.cpp',
'EigenSolver.cpp',
'ElectronRateSolver.cpp',
'ElectronSolverGridDynamics.cpp',
'ElectronSolverIO.cpp',
'FreeDistribution.cpp',
'Grid.cpp',
'HartreeFock.cpp',
'Input.cpp',
'MolInp.cpp',
'Numerics.cpp',
# 'Plotting.cpp',
'Potential.cpp',
'Pulse.cpp',
'RadialWF.cpp',
'RateSystem.cpp',
'SplineBasis.cpp',
'SplineIntegral.cpp',
'main.cpp',
)


project_sources += main_sources

subdir('Wigner')
